Archive2/f3/9b2a1b5d60e399/output
main.cpp:23:50: error: template argument 1 is invalid
 const std::string& Stringify<MigrationPhase_t mig>::getName()
                                                  ^
main.cpp: In function 'int main()':
main.cpp:44:18: error: incomplete type 'Stringify<(MigrationPhase_t)1u>' used in nested name specifier
     std::cout << Stringify<kTPFMaster>::getName() << std::endl;
                  ^
main.cpp:43:28: warning: unused variable 'aMigP' [-Wunused-variable]
     const MigrationPhase_t aMigP = kTPFMaster;
                            ^
